# axum-openapi-router

./: Cargo.toml
src/: lib.rs  openapi_generator.rs  openapi_schema.rs  router.rs
src/openapi_generator/: from_request.rs  into_response.rs  json_schema_ref.rs
src/openapi_schema/: media_type_object.rs  operation_object.rs  path_object.rs  reference_object.rs  response_object.rs
