[package]
name = "axum-openapi-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
schemars = "0.8.11"
serde = "1.0.145"
tower-service = "0.3.2"

[dev-dependencies]
serde_json = "1.0.86"
